# HHmL

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EMERGENTS.md  FORK_NOTES.md  GPU_ACCELERATION_WHITEPAPER.out  GPU_ACCELERATION_WHITEPAPER.tex  H200_DEPLOYMENT_READY.md  H200_QUICK_START.md  H200_TOKAMAK_WORMHOLE_DEPLOYMENT.md  H200_TRAINING_RESULTS.md  LICENSE  MIGRATION_GUIDE.md  PHASE2_COMPLETE.md  QUALITY_GUIDED_SUCCESS_SUMMARY.md  README.md  README.md.old  README.out  README.tex  REFACTORING_SUMMARY.md  RNN_PARAMETER_MAPPING.md  VORTEX_COLLISION_REPORT.md  benchmark_multi_strip.py  generate_pdf_report.py  pyproject.toml  requirements.txt  run_optimized_3min.py  setup.py  test_mobius_quick.py  train_local_scaled.py  train_multi_strip.py  verify_refactoring.sh
HASH-QUINE/: README.md
HASH-QUINE/code/: recursive_singularity_miner.py
HASH-QUINE/investigations/: 1_topology_comparison.py  2_tsp_optimization.py  3_entropy_analysis.py  4_holographic_interpretation.py  5_sat_solver_comparison.py  6_optimized_hybrid_sat.py  FINDINGS.md  SAT_SUMMARY.md  run_all_investigations.py
HASH-QUINE/paper/: hash_quine_whitepaper.out  hash_quine_whitepaper.tex
HASH-QUINE/results/: recursive_singularity_20251218_175221.json  recursive_singularity_20251218_175227.json
PERFECT-TEMPORAL-LOOP/: README.md
PERFECT-TEMPORAL-LOOP/code/: temporal_retrocausal_v2.py
PERFECT-TEMPORAL-LOOP/paper/: perfect_temporal_loop_whitepaper.out  perfect_temporal_loop_whitepaper.tex
PERFECT-TEMPORAL-LOOP/results/: temporal_retrocausal_20251218_194841.json  temporal_retrocausal_20251218_194854.json  temporal_v2_20251218_195803.json  temporal_v2_20251218_195828.json
YANG-MILLS-MASS-GAP/paper/: yang_mills_whitepaper.out  yang_mills_whitepaper.tex
archive/legacy_ivhl_docs/: OPTIMIZATION_GUIDE.md
configs/environments/: benchmark_mobius.yaml  (+2 more)
docker/: Dockerfile.cpu  Dockerfile.cuda  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
docs/: 10K_TRAINING_VALIDATION.md  30MIN_EMERGENT_FINDINGS.md  DARK_MATTER_PRUNING_THEORY.md  H200_SCALED_DEPLOYMENT.md  LIVE_DASHBOARD_INTEGRATION.md  RNN_TOKAMAK_10K_PRODUCTION_VALIDATION.md  RNN_TOKAMAK_3CATEGORY_VORTEX_DETECTION.md  RNN_TOKAMAK_BASELINE_100CYCLES.md  RNN_TOKAMAK_SUCCESS_100CYCLES.md  SPATIOTEMPORAL_FRAMEWORK.md  SPATIOTEMPORAL_VERIFICATION.md  STRESS_TEST_PROTOCOL.md  TEMPORAL_VORTEX_CONTROL.md
hhml/: __init__.py
investigations/: 12_mobius_sat_benchmark.py  INVESTIGATION_12_HELICAL_HYBRID.md  INVESTIGATION_12_PRIME_STRIPS.md  INVESTIGATION_12_RNN_HYBRID_COMPARISON.md  INVESTIGATION_12_SUMMARY.md  INVESTIGATION_12_WHITEPAPER_SUMMARY.md  INVESTIGATION_13_HELICAL_CDCL_RNN.md  INVESTIGATION_14_ADAPTIVE_HELIX_RNN.md
scripts/: post_process_10k_training.sh  train_h200_scaled.py  train_multi_strip.py  train_quality_generator.py  train_quality_guided.py  train_surgical_reset.py
tests/: conftest.py
web_monitor/: whitepaper_generator.py
whitepapers/: dark_matter_pruning_test.out  dark_matter_pruning_test.tex  h200_scaled_validation.out  h200_scaled_validation.tex  quality_guided_vortex_learning.md  quality_guided_vortex_learning.out  quality_guided_vortex_learning.tex
(+137 files in other folders)
