[build-system]
requires = ["setuptools>=65.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hhml"
version = "0.1.0"
description = "Holo-Harmonic Möbius Lattice: A Glass-Box Framework for Emergent Topological Phenomena Discovery"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "HHmL Research Collective", email = "hhml@conceptual1.dev"}
]
maintainers = [
    {name = "Conceptual1", email = "hhml@conceptual1.dev"}
]
keywords = [
    "topology",
    "mobius-strip",
    "reinforcement-learning",
    "vortex-dynamics",
    "holography",
    "computational-physics",
    "emergent-phenomena"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "pre-commit>=3.3.0",
    "ipython>=8.14.0",
    "jupyterlab>=4.0.0",
]
docs = [
    "sphinx>=6.2.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.23.0",
]
viz = [
    "plotly>=5.14.0",
    "seaborn>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/Zynerji/HHmL"
Documentation = "https://hhml.readthedocs.io"
Repository = "https://github.com/Zynerji/HHmL"
Issues = "https://github.com/Zynerji/HHmL/issues"
Twitter = "https://twitter.com/Conceptual1"

[project.scripts]
hhml-train = "hhml.cli:train"
hhml-analyze = "hhml.cli:analyze"
hhml-validate = "hhml.cli:validate"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hhml*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | archive
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=hhml --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/hhml"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
